bk_ida/gccida/g2/apply_delayed_renames
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/apply_delayed_renames/src/ssa.c:1277:26: error: use of undeclared identifier 'machine_mode'
old_reg = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)old_reg + 2)); 
                         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/apply_delayed_renames/src/obj/ssa.o] Error 1
